RESOLVED FIXED16863
[GTK] tab focusing doesn't work
https://bugs.webkit.org/show_bug.cgi?id=16863
Summary [GTK] tab focusing doesn't work
Luca Bruno
Reported 2008-01-13 12:30:49 PST
Open a page, then use the TAB to focus widgets in the page. It doesn't work. I'm using r29446.
Attachments
Fix (4.43 KB, patch)
2008-02-18 18:06 PST, Alp Toker
mrowe: review+
Luca Bruno
Comment 1 2008-01-13 12:45:47 PST
The issue is there also with r29455. I've GTK+ 2.12.1-r2 installed.
Alp Toker
Comment 2 2008-01-13 15:09:20 PST
I couldn't reproduce this with r29455. Downgrading bug priority, P1 should only be for crashers and serious API issues in the GTK+ port. Did you do try a clean build? Can you describe what happens when you press tab/shift-tab? Are you using GtkLauncher? I'm using GTK+ 2.12.0-1ubuntu3
Luca Bruno
Comment 3 2008-01-14 11:39:11 PST
Clean build r29473 (HEAD) with both GtkLauncher and epiphany. The used library is right the latest built.
Alp Toker
Comment 4 2008-01-18 23:52:14 PST
Fix specified in Bug #16910 landed in r29665.
Luca Bruno
Comment 5 2008-02-14 23:38:59 PST
I noticed the problem about 2 week ago but didn't reopened the bug. Now the problem is there again. Pressing TAB doesn't change focus inside the view. Using svn gtk+/glib/pango/webkit. Straight normal ./configure.
Luca Bruno
Comment 6 2008-02-15 09:19:01 PST
Found the problem. Maybe my X configuration enables GDK_MOD2_MASK when num lock is on, which enables the event->metaKey (). Tab key event with meta keys is not handled by WebCore. Instead, disabling num lock will enable tab focusing again and bring the meta key to off.
Pierre-Luc Beaudoin
Comment 7 2008-02-15 09:59:28 PST
Same results here: Can't tab with num lock on. Tabs for perfectly with num lock off.
Alp Toker
Comment 8 2008-02-18 18:06:41 PST
Mark Rowe (bdash)
Comment 9 2008-02-19 04:46:04 PST
Comment on attachment 19202 [details] Fix It might be worth looking at setting things up such that you can do: #if HAVE(GDK_META_MASK) rather than: #if GTK_CHECK_VERSION(2,10,0) as it'd be clearer what the test is about. Either way, r=me.
Alp Toker
Comment 10 2008-02-19 05:06:16 PST
(In reply to comment #9) > (From update of attachment 19202 [details] [edit]) > It might be worth looking at setting things up such that you can do: > > #if HAVE(GDK_META_MASK) > > rather than: > > #if GTK_CHECK_VERSION(2,10,0) > > as it'd be clearer what the test is about. Either way, r=me. > I'm going to give this cleanup a miss since I hope we can eventually combine the event class init code and get rid of the duplication completely. Landed in r30404.
Note You need to log in before you can comment on or make changes to this bug.