WebCore/platform/gtk/MouseEventGtk.cpp
@@ -31,11 +31,13 @@
 #include "Assertions.h"
 
 #include <gdk/gdk.h>
+#include <gtk/gtkversion.h>
 
 namespace WebCore {
 
 // FIXME: Would be even better to figure out which modifier is Alt instead of always using GDK_MOD1_MASK.
 
+// Keep this in sync with the other platform event constructors
 PlatformMouseEvent::PlatformMouseEvent(GdkEventButton* event)
 {
     m_timestamp = event->time;
@@ -44,7 +46,12 @@ PlatformMouseEvent::PlatformMouseEvent(GdkEventButton* event)
     m_shiftKey = event->state & GDK_SHIFT_MASK;
     m_ctrlKey = event->state & GDK_CONTROL_MASK;
     m_altKey = event->state & GDK_MOD1_MASK;
-    m_metaKey = event->state & GDK_MOD2_MASK;
+#if GTK_CHECK_VERSION(2,10,0)
+    m_metaKey = event->state & GDK_META_MASK;
+#else
+    // GDK_MOD2_MASK doesn't always mean meta so we can't use it
+    m_metaKey = false;
+#endif
 
     switch (event->type) {
     case GDK_BUTTON_PRESS:
